# dns-agent

./: .gitignore  README.md  SECURITY.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml
.serena/: project.yml
config/: __init__.py  blocklist_sources.yml  dns_agent.yml
core/: auto_updater.py  blocklist.py  blocklist_updater.py  cache.py  config.py  dashboard.py  database.py  dns_server.py  logger.py  network_utils.py  platform_utils.py
ui/templates/: dashboard.html
